fix alignment product form hp

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -295,8 +295,10 @@ html, body {
     &-4 {
       float: left;
       width: 33.3333%;
-      padding: 0 5px;
-
+      padding: 0 5px 0 0;
+      &:last-child {
+        padding: 0;
+      }
       > input[type="radio"] {
         display: none;
       }
